force-app/main/default/objects/Trigger_Handler__mdt/fields/After_Delete__c.field-meta.xml
<CustomField>
    <fullName>After_Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>