force-app/main/default/objects/Trigger_Handler__mdt/fields/After_Insert__c.field-meta.xml
<CustomField>
    <fullName>After_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>