force-app/main/default/objects/Trigger_Handler__mdt/fields/After_Update__c.field-meta.xml
<CustomField>
    <fullName>After_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>