force-app/main/default/objects/Trigger_Handler__mdt/fields/ApexHandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexHandlerClassName__c</fullName>
    <label>Apex Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>