force-app/main/default/objects/Trigger_Handler__mdt/fields/Load_Order__c.field-meta.xml
<CustomField>
    <fullName>Load_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Load Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>