force-app/main/default/objects/Trigger_Handler__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Setting</relationshipLabel>
    <relationshipName>Trigger_Setting</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>